# esp32-wifi-sniffer

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml  genssl.sh
.cargo/: config.toml
docs/: arbejds-portfolio.typst  logbog.typst
mosquitto/config/: mosquitto.conf
src/: main.rs  mqtt.rs  sniffer.rs  wifi.rs
web/: config.toml  index.html
