[package]
name = "esp-sniffer-rs"
version = "0.1.0"
authors = ["patrickhaahr <git@haahr.me>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp-sniffer-rs"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[[bin]]
name = "web-gui"
path = "src/bin/web-gui.rs"
required-features = ["web-gui"]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["esp32"]

esp32 = ["esp-idf-svc", "embedded-svc"]
web-gui = ["dep:axum", "dep:axum-server", "dep:rustls", "dep:tokio", "dep:tower-http", "dep:rumqttc", "dep:serde", "dep:serde_json", "dep:tokio-stream", "dep:toml", "dep:futures-util", "dep:rand", "dep:env_logger"]

experimental = ["esp-idf-svc/experimental"]
rumqttc = ["dep:rumqttc"]

[dependencies]
log = "0.4"
anyhow = "1.0.100"
sha2 = { version = "0.10", default-features = false }
dotenvy = "0.15.7"

# ESP32-specific dependencies
esp-idf-svc = { version = "0.51", optional = true }
embedded-svc = { version = "0.28.1", optional = true }

# Web GUI dependencies (native only)
axum = { version = "0.7", optional = true, features = ["ws"] }
axum-server = { version = "0.7", optional = true, default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std", "tls12"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "sync", "time", "net"], optional = true }
tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio-stream = { version = "0.1", optional = true }
toml = { version = "0.8", optional = true }
futures-util = { version = "0.3", optional = true }
rand = { version = "0.8", optional = true }
env_logger = { version = "0.11", optional = true }
rumqttc = { version = "0.25", optional = true, default-features = false, features = ["use-rustls"] }

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc.) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
dotenvy = "0.15.7"
embuild = "0.33"

# Patch only needed for ESP32 builds, not for native web-gui builds
# [patch.crates-io]
# ring = { git = "https://github.com/briansmith/ring", branch = "main" }
